# license-plate-detector

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  model_impl.py  pyproject.toml
assets/: train.ipynb
