[project]
name = "license-plate-detector"
version = "0.1.0"
description = ""
authors = [
    {name = "ObjoradDdd", email = "a.trunov2006@stud.tsu.ru"}
]
requires-python = "^3.10"
dependencies = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.13.0.92,<5.0.0.0",
    "numpy>=1.23.5"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"